fixed spacing , scrolling, and minor pad/marg

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -15,12 +15,10 @@ html {
     background-color: $sitebg;
     color: $text;
     font-size: 16px;
-    overflow: hidden;
 }
 
 body {
     margin: 0;
-    overflow: hidden;
 }
 
 ///// Page Containers
@@ -31,17 +29,16 @@ body {
     align-items: center;
     height: 100vh;
     flex-direction: column;
-    overflow: hidden;
 
     .content-wrapper {
         max-width: 750px;
         width: percentage($number: calc(725/750));
         margin-inline: auto;
-        overflow: auto;
 
         display: flex;
         flex-direction: column;
         height: 100%;
+        overflow: hidden;
     }
 }
 
@@ -81,15 +78,13 @@ body {
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
-
     border: 1.5px solid $border;
     border-radius: $border-rad;
     background-color: transparent;
-
-    margin-block: 5px;
     position: relative;
-    margin-top: 40px;
+
     padding-block: 5px 5px;
+    margin-block: 40px 20px;
     
 
     &:focus-within {
@@ -135,6 +130,7 @@ body {
 
         resize: none;
         min-height: 22px;
+        max-height: 25vh;
 
         flex-grow: 2;
 
@@ -143,7 +139,7 @@ body {
         }
 
         &.sizeable {
-            max-height: 50vh;
+            max-height: 25vh;
             resize: vertical;
         }
 
@@ -220,14 +216,16 @@ body {
 ///// After Input Container
 /// and Objects
 #after-input {
-    margin-top: 5vh;
+    margin-top: 4vh;
     padding: 7.5px;
     background-color: $red;
     border-radius: 15px;
     flex-grow: 2;
     background: linear-gradient(to bottom, $sitebg -500%, $background 55%, $sitebg 95%);
     height: 75vh;
-    overflow: hidden;
+    
+
+
     margin-inline: 0.25em;
     position: relative;
 
@@ -264,8 +262,10 @@ body {
     div#posts {
         display: flex;
         flex-direction: column;
-        height: 100%;
+        height: 92.5%;
+        
         overflow-y: auto;
+
         padding-inline: 10px;
     
         .post {
